# halomod

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  CONTRIBUTING.rst  CONTRIBUTORS.rst  INSTALLATION.rst  LICENSE.txt  README  README.rst  bump  changethelog.py  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: bump_version.yaml  check-build.yml  labeler.yml  merge-me.yaml  merge-to-dev.yaml  pre_commit.yaml  publish-to-pypi.yaml  publish-to-test-pypi.yaml  run-docs-code.yaml  tag-release.yaml  test_suite.yaml  warnings-tests.yaml
ci/: citest.yaml
devel/: HMcode.ipynb  angular_corr_dev.ipynb  deriving_halo_profile_equations.nb  dumb_example.py  einasto_profile.ipynb  fix_angular_cf.ipynb  halo_exclusion_testing.ipynb  make_einasto_data.py  robust_hankel_transforms.ipynb  test_einasto.py  test_ludlow_vs_sigma_cmz.py  uKc_einasto.npz  using_angular_corr.ipynb
devel/wdm_devel/: wdm_development.ipynb
docs/: api.rst  conf.py  developing.rst  environment.yaml  tutorials.rst
docs/examples/: .gitignore  beyond_galaxy.ipynb  component-showcase.ipynb  cross_correlation.ipynb  extension.ipynb  fitting.ipynb  getting_started.ipynb  parameter.ipynb  wdm.ipynb
docs/templates/: class.rst
examples/: #xir.example#  cov.example  example_run_config.toml  halomod-fit.config  wprp.example  xir.example  zehavi2001.config  zehavi2011.config
halomod/: __init__.py  _covardata.py  bias.py  concentration.py  cross_correlations.py  fit.py  functional.py  halo_exclusion.py  halo_model.py  hod.py  integrate_corr.py  profiles.py  tools.py  twohalo_wrapper.py  wdm.py
halomod/fort/: hod_routines.mod  routines.f90  twohalo.f90  twohalo_wrapper.py
hod/: __init__.py  bias.py  fit.py  halo_exclusion.py  halo_model.py  hankel_transform.py  hod.py  hod_models.py  mc_fit_hod.py  profiles.py  tools.py  twohalo_wrapper.py
hod/fort/: halo_exclusion.f90  power_to_corr.f90  routines.f90  utils.f90
pip-wheel-metadata/halomod.dist-info/: METADATA  top_level.txt
scripts/: halomod-fit  pophod  pophod.py  read_halo.py  transfer_diff.py
src/halomod/: __init__.py  _cli.py  bias.py  concentration.py  cross_correlations.py  functional.py  halo_exclusion.py  halo_model.py  hod.py  integrate_corr.py  profiles.py  tools.py  wdm.py
src/halomod/fort/: twohalo_wrapper.py
tests/: conftest.py  get_all_power_corr.py  get_galcorr.py  make_hmcode_data.sh  make_regression_data.py  plot_all.py  run_hankel.py  test_beutler.py  test_bias.py  test_blake.py  test_cli.py  test_concentration.py  test_cross_corr.py  test_exclusion.py  test_halo_model.py  test_hmcode.py  test_hod.py  test_integrate_corr.py  test_known_results.py  test_profile.py  test_regression.py  test_tools.py  test_wdm.py
tests/data/: bias_STz0.0  bias_STz2.0  lamrz0.0  lamrz2.0  lamz0.0  lamz2.0  ncenz2.0  nsatz2.0  rhorz0.0  rhorz2.0  rhoz0.0  rhoz2.0  ukz0.0  ukz2.0  umz0.0  umz2.0
tests/data/beutler/: readme.txt  wp_dump.txt  xir_dump.txt
tests/data/blake/: biasfn.txt  linearpk.txt  m_vs_nu.txt  massfn.txt  nonlinpk.txt  readme.txt
tests/data/regression/5030934da7e8b0e46f9d36f7751a0747/: bias_effective_matter.npy  bias_effective_tracer.npy  central_fraction.npy  mass_effective.npy  mean_tracer_den.npy  params.yaml  satellite_fraction.npy
tests/data/regression/7a7cd905b052f842af41b2df5cfdf3a4/: bias_effective_matter.npy  bias_effective_tracer.npy  central_fraction.npy  mass_effective.npy  mean_tracer_den.npy  params.yaml  satellite_fraction.npy
tests/data/regression/adb20f9dba6422a3b3ad948d3d40833f/: bias_effective_matter.npy  bias_effective_tracer.npy  central_fraction.npy  mass_effective.npy  mean_tracer_den.npy  params.yaml  satellite_fraction.npy
tests/data/regression/aea7e6e33a89e2ee6e6aed46db3abb07/: bias_effective_matter.npy  bias_effective_tracer.npy  central_fraction.npy  mass_effective.npy  mean_tracer_den.npy  params.yaml  satellite_fraction.npy
tests/data/regression/b7a3a569bf4f84b2a0b37da0cefecfd3/: bias_effective_matter.npy  bias_effective_tracer.npy  central_fraction.npy  halo_profile_rho.npy  mass_effective.npy  mean_tracer_den.npy  params.yaml  satellite_fraction.npy
