[bumpversion]
current_version = 2.0.1
commit = False
tag = False

[bumpversion:file:VERSION]

[metadata]
name = halomod
description = A Halo Model calculator built on hmf
author = Steven Murray
author-email = steven.g.murray@asu.edu
license = mit
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/steven-murray/halomod
project-urls = 
	Documentation = https://halomod.readthedocs.org
platforms = any
classifiers = 
	Development Status :: 4 - Beta
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Intended Audience :: Science/Research
	License :: OSI Approved
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Topic :: Scientific/Engineering :: Physics
	Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir = 
	=src
install_requires = 
	hmf>=3.3.4
	mpmath
	cached_property
	numpy
	scipy
	colossus
	hankel

[options.packages.find]
where = src
exclude = 
	tests

[options.extras_require]
docs = 
	Sphinx>=1.7.5
	numpydoc>=0.8.0
	nbsphinx
tests = 
	coverage>=4.5.1
	pytest>=3.5.1
	pytest-cov>=2.5.1
	pre-commit
	mpmath>=1.0.0
	numba
dev = 
	Sphinx>=1.7.5
	numpydoc>=0.8.0
	nbsphinx
	coverage>=4.5.1
	pytest>=3.5.1
	pytest-cov>=2.5.1
	pre-commit
	mpmath>=1.0.0
	numba
all = 
	camb>1.0.0<2.0

[options.entry_points]
console_scripts = 
	halomod = halomod._cli:main

[test]
extras = True

[tool:pytest]
addopts = 
	--cov halomod --cov-report term-missing
	--verbose
norecursedirs = 
	dist
	build
	.tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel
